syntax="proto3";

package pb;

option go_package = "./pkg/pb";

service AuthService{
    rpc Register (RegisterRequest) returns (RegisterResponse){}
    rpc GetUser (GetUserRequest) returns (GetUserResponse){}
    rpc Update(UpdateRequest) returns (UpdateResponse){}
    rpc Delete(DeleteRequest) returns (DeleteResponse){}
    rpc GetAll(GetAllRequest) returns (GetAllResponse){}
}

message RegisterRequest{
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string phone =4;
}

message RegisterResponse{
    int32 status =1;
    string response =2;
    string error =3;
    int32 ID=4;

}

message GetUserRequest{
    int32 ID=1;
}

message User{
    string first_name=1;
    string last_name=2;
    string email=3;
    string phone=4;
}

message GetUserResponse{
    int32 status =1;
    User user=2;
    string error =3;
} 

message UpdateRequest{
    int32 ID=1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
}

message UpdateResponse{
    int32 status =1;
    string response =2;
    string error =3;
    User user=4;

}

message DeleteRequest{
    int32 ID=1;
}

message DeleteResponse{
    int32 status =1;
    string response =2;
    string error =3;
}

message GetAllRequest{
    int32 flag =1;
}

message GetAllResponse{
    int32 status =1;
    string response =2;
    string error =3;
    int32 count = 4;
    repeated MethodUser users = 5;
}

message MethodUser {
    string first_name = 1;
}
